--- a/the-mall/.gitignore
+++ b/the-mall/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# SENSITIVE INFORMATION, THIS NEEDS TO BE IGNORED
+# firebase information
+/src/firebase-config.js
+
 # dependencies
 /node_modules
 /.pnp
