Firebase nearly setup

--- a/the-mall/package.json
+++ b/the-mall/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.6.28",
+    "@firebase/firestore": "^2.3.9",
+    "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
