--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@firebase/auth": "^0.16.8",
     "@firebase/firestore": "^2.3.9",
     "@react-firebase/auth": "^0.2.10",
+    "@react-three/drei": "^7.3.1",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
