--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@react-spring/three": "^9.2.4",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
+    "@react-three/flex": "^0.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "drei": "^2.2.21",
     "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-three-flex": "^0.5.2",
     "three": "^0.131.3",
     "web-vitals": "^1.1.2"
   },
