--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@firebase/app": "^0.6.28",
     "@firebase/auth": "^0.16.8",
     "@firebase/firestore": "^2.3.9",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@react-firebase/auth": "^0.2.10",
     "@react-spring/three": "^9.2.4",
     "@react-three/drei": "^7.3.1",
