--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-firestore": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
