--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@firebase/app": "^0.6.28",
     "@firebase/auth": "^0.16.8",
     "@firebase/firestore": "^2.3.9",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.4",
     "@react-firebase/auth": "^0.2.10",
     "@react-spring/three": "^9.2.4",
     "@react-three/drei": "^7.3.1",
