--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/three": "^9.2.4",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
+    "@react-three/flex": "^0.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
