--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@firebase/firestore": "^2.3.9",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.4",
     "@react-firebase/auth": "^0.2.10",
     "@react-spring/three": "^9.2.4",
