--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.10.0",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
