--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animation": "^0.1.3",
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
